# Bakify

./: .gitignore  CMakeLists.txt  README.md
bakify/: CMakeLists.txt
bakify/src/: backup_factory.cpp  main.cpp
bakify/src/include/: backup_factory.hpp
